# django

./: db.sqlite3  pyproject.toml
account/: admin.py  models.py  views.py
account/migrations/: 0001_initial.py
config/: settings.py  urls.py
product/: urls.py  views.py
static/css/: styles.css
templates/: base.html
templates/account/: create_user.html  register_login.html  users.html
templates/product/: product_list.html
